a strange bug is causing invisible rows to be routed.

--- a/app/less/square.less
+++ b/app/less/square.less
@@ -38,7 +38,8 @@ square {
     }
 
     &[chaining='true'] {
-        transform: translateZ(20px) scale(1.10);
+        // transform: translateZ(20px) scale(1.10);
+        .pattern(@white);
     }
 
     .createBackgroundInAllColors (@i) when (@i >= 0) {
